--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="experiencia.html">Experiencia</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
-        <li><a href="#servicios.html">Quiero tus servicios</a></li>
+        <li><a href="servicios.html">Quiero tus servicios</a></li>
     </ul>
 </nav>
     </header>
