--- a/servicios.html
+++ b/servicios.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -20,7 +20,7 @@
     </nav>
 
     <h2>Completa el formulario para solicitar un presupuesto o encargo</h2>
-     Include Forminit SDK -->
+    <!-- Include Forminit SDK -->
     <script src="https://forminit.com/f/7l5h540xiex"></script> 
 
     <form method="post" id="7l5h540xiex" action="https://forminit.com/f/7l5h540xiex">
